# HDF5-External-Filter-Plugins

LZ4/: .gitignore  aclocal.m4  config.h.in  configure  configure.ac  makefile.in
LZ4/example/: makefile.am  makefile.in  test.sh.in
LZ4/example/testfiles/: h5repack_layout.h5-ud_convert.ddl
LZ4/src/: H5Zlz4.c  makefile.am  makefile.in
